<resources>
    <string name="app_name">Next Shopper</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up_with_email">Sign In With Email</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="signup">Sign Up</string>
    <string name="join">Join</string>
    <string name="signup_firstname">First Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="passwordhint">Password. Min 6 characters</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="tap_upload_photo">Tap to upload your photo</string>
    <string name="signup_agreement">By joining NextShopper, \n you agree to the</string>
    <string name="signup_term">Terms of Service and Privacy Policy</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="camera">Camera</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="ok">OK</string>
    <string name="dialog_title">Oops</string>
    <string name="dialog_warining">Warning</string>
    <string name="dialog_infomration">Information</string>
    <string name="recover_pwd_sent">Please check your email for the temp password</string>
    <string name="dialog_message">First name, last name, email and password are required.</string>
    <string name="title_section1">Shop</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close_drawer</string>
    <string name="login_or_signup">Log In or Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings2">setting2</string>
    <string name="home_shop">Shop</string>
    <string name="home_search">Search</string>
    <string name="home_about">About</string>
    <string name="home_shoppingcart">Shopping Cart</string>
    <string name="home_settings">Settings</string>
    <string name="home_message">Message</string>
    <string name="home_orderhistory">Order History</string>
    <string name="search">Search</string>
    <string name="keyword">Type keyword here</string>
    <string name="search_keyworkd">Type keyword here</string>
    <string name="women_clothing">Women\'s Clothing</string>
    <string name="all">All</string>
    <string name="coats_and_jackets"><![CDATA[Coats & jackets]]></string>
    <string name="dresses">Dresses</string>
    <string name="tops">Tops</string>
    <string name="bottoms">Bottoms</string>
    <string name="shorts_shirts">Shorts/Skirts</string>
    <string name="suits">Suits</string>
    <string name="sweaters">Sweaters</string>
    <string name="swimwear">Swimwear</string>
    <string name="activewear">Activewear</string>
    <string name="maternity">Maternity</string>
    <string name="bridalveil">Bridal Veil</string>
    <string name="women_shoes">Women\'s Shoes</string>
    <string name="casual">Casual</string>
    <string name="boots">Boots</string>
    <string name="dress">Dress</string>
    <string name="sandals">Sandals</string>
    <string name="sneakers">Sneakers</string>
    <string name="women_accessory">Women\'s Accessories</string>
    <string name="bags">Bags</string>
    <string name="watches">Watches</string>
    <string name="wallets">Wallets</string>
    <string name="hats"><![CDATA[Hats, Gloves & Scarves]]></string>
    <string name="belts">Belts</string>
    <string name="login_menu">Shop,Search,Shopping Cart,Settings,Message,Order History,About</string>
    <string name="guest_menu">Shop,Search,About</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="account">ACCOUNT</string>
    <string name="updage_profile">Update Profile</string>
    <string name="socks">Socks</string>
    <string name="sunglasses">Sunglasses</string>
    <string name="girl_clothing">Girl\'s Clothing</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="change_pwd">Change Password</string>
    <string name="shipping">Shipping</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="favorites">Favorites</string>
    <string name="followed_stores">Followed Stores</string>
    <string name="logout">Logout</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="current">Current</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="min_pwd">Min. 6 characters</string>
    <string name="no_message">You don\'t have message.</string>
    <string name="order_history">Order History</string>
    <string name="order_empty">You don\'t have any order yet</string>
    <string name="nextshopper">NEXT SHOPPER</string>
    <string name="aboutus">Abount Us</string>
    <string name="fqa">FQA</string>
    <string name="contact_support">Contact Support</string>
    <string name="term_of_service">Term of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="version">Version</string>
    <string name="version_number">1.0 /1506152140</string>
    <string name="type_keyword_here">Type keyword here</string>
    <string name="signin">Sign In</string>
    <string name="go">Go</string>
    <string name="forgot_your_pwd">Forgot your password</string>
    <string name="title_activity_recover_pwd">RecoverPwdActivity</string>
    <string name="recover_pwd">Recover Password</string>
    <string name="send">Send</string>
    <string name="recover_pwd_text">Please enter your email address below.\n We will send a temp password to you.</string>
    <string name="product_details">Product Details</string>
    <string name="test">test</string>
    <string name="share">Share</string>
    <string name="buy_now">Buy Now</string>
    <string name="hrs_support">24hrs_Support</string>
    <string name="buyer_protection">Buyer_Protection</string>
    <string name="free_return">Free Return</string>
    <string name="product_deliver">Product will be delivered in 7 to 21 days</string>
    <string name="product_followers">%1$d Products %2$d Follows</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="also_like">You may also like these</string>
    <string name="salesprice">%1$.2f USD</string>
    <string name="listprice">%1$.2f USD</string>
    <string name="spec"><![CDATA[Spec & Description]]></string>
    <string name="review">%1$d Review</string>
    <string name="milk">milk</string>
    <string name="quanity">Quantity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="one">1</string>
    <string name="hrs_support_details">We are ready to help, contact us and we will get back to you within 24 hours.</string>
    <string name="buer_protection_details">Nextshooper always stand behind your customers. Get your items or get your money back!</string>
    <string name="free_return_details">Don\'t like it? No problem! You can return it for free with 15 days after you receive the item.</string>
    <string name="title_activity_spec">SpecActivity</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="reviews">Reviews</string>
    <string name="newreview">New</string>
    <string name="title_activity_create_review">CreateReviewActivity</string>
    <string name="create_a_review">Create a Review</string>
    <string name="create">Create</string>
    <string name="rating">Rating</string>
    <string name="your_review">Your review</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="shopper_cart">Shopping Cart</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="credit_your_have">Credit You Have</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="net_pay">Net Pay</string>
    <string name="n_and_a">N/A</string>
    <string name="order_store_name">Store:  %1$s</string>
    <string name="order_prodcut_price">USD %1$.2f</string>
    <string name="empty_cart">Remove this item from shopping cart?</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="price">$%1$.2f</string>
    <string name="title_activity_shipping">ShippingActivity</string>
    <string name="next">Next</string>
    <string name="title_activity_store_details">StoreDetailsActivity</string>
    <string name="store">Store</string>
    <string name="follow">+ Follow</string>
    <string name="following">Following</string>
    <string name="products">Products</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="title_activity_contact_seller">ContactSellerActivity</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="subject">Subject</string>
    <string name="your_message">You message here</string>
    <string name="attach_a_photo">Attach a photo</string>
    <string name="title_activity_pwd_update">PwdUpdateActivity</string>
    <string name="current_pwd_required">Current password is required</string>
    <string name="error">Error</string>
    <string name="new_pwd_required">New password is required</string>
    <string name="pwd_not_match">Password does not match</string>
    <string name="phone">Phone</string>
    <string name="Address">Address</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="title_activity_order_preview">OrderPreviewActivity</string>
    <string name="order_preview">Order Preview</string>
    <string name="submit">Submit</string>
    <string name="ship_to">Ship To</string>
    <string name="confirmation">Confirmation</string>
    <string name="thanks">Thanks for your order!</string>
    <string name="order_shipped">Your order will be shipped soon.</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="quantity_num">Quantity: %1$d</string>
    <string name="price_usd">Price: USD  %1$.2f</string>
    <string name="rave_it">Rave It!</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="order_details">Order Details</string>
    <string name="order_number">Order Number</string>
    <string name="order_date">Order Date</string>
    <string name="order_status">Order Status</string>
    <string name="grand_total">Grand Total</string>
    <string name="store_credit_applied">Store Credit Applied</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="title_activity_review_order">ReviewOrderActivity</string>
    <string name="review_title">Review</string>
    <string name="service">Service</string>
    <string name="product">Product</string>
    <string name="next_shopper">Next Shopper</string>
    <string name="title_activity_msg_thread">MsgThreadActivity</string>
</resources>