<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nextshopper.activity.OrderDetailsActivity">

    <com.nextshopper.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:imageLeft="@drawable/back"
        app:textMiddle="@string/order_details"
        app:textMiddleColor="@color/black"/>
    <com.nextshopper.view.Item
        android:id="@+id/order_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_value="@string/order_number"/>
    <com.nextshopper.view.Item
        android:id="@+id/order_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_value="@string/order_date"/>
    <com.nextshopper.view.Item
        android:id="@+id/order_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_value="@string/order_status"/>
    <com.nextshopper.view.Item
        android:id="@+id/order_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_value="@string/grand_total"/>
    <com.nextshopper.view.Item
        android:id="@+id/order_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_value="@string/store_credit_applied"/>
    <com.nextshopper.view.Item
        android:id="@+id/order_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_value="@string/coupon_applied"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/ship_to"/>
        <TextView
            android:id="@+id/order_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/order_details_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address"/>
        <TextView
            android:id="@+id/order_details_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"/>
    </LinearLayout>
    <ListView
        android:id="@+id/order_details_all_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
