<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:nextshopper="http://schemas.android.com/apk/res-auto"
    tools:context="com.nextshopper.view.AboutFragment">
    <com.nextshopper.view.TitleView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        nextshopper:imageLeft="@drawable/menu_active"
        nextshopper:textMiddle="@string/home_about"
        nextshopper:textMiddleColor="@color/black"/>
    <View
        android:id="@+id/about_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_title"
        android:background="@color/gray"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/about_line"
        android:background="@color/lightgreen">
        <TextView
            android:id="@+id/about_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nextshopper"/>
        <com.nextshopper.view.SettingItem
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_account"
            nextshopper:item="@string/aboutus" />
        <com.nextshopper.view.SettingItem
            android:id="@+id/about_fqa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_us"
            nextshopper:item="@string/fqa" />
        <com.nextshopper.view.SettingItem
            android:id="@+id/about_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_fqa"
            nextshopper:item="@string/contact_support"
            />
        <com.nextshopper.view.SettingItem
            android:id="@+id/about_tos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_support"
            nextshopper:item="@string/term_of_service"/>
        <com.nextshopper.view.SettingItem
            android:id="@+id/about_pp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_tos"
            nextshopper:item="@string/privacy_policy"/>
        <View
            android:id="@+id/about_nextshoppoer_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_below="@id/about_pp"/>
        <com.nextshopper.view.SettingItem
            android:id="@+id/about_rate_this_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_nextshoppoer_line"
            android:layout_marginTop="40dp"
            nextshopper:item="@string/rate_this_app"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_rate_this_app"
            android:background="@drawable/textview_selector">
            <View
                android:id="@+id/setting_item_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/setting_item_line"
                android:text="@string/version"
                android:layout_margin="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/version_number"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/about_version"
                android:background="@color/gray"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
