<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nextshopper.activity.OrderActivity">
    <com.nextshopper.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        app:imageLeft="@drawable/back"
        app:textMiddle="@string/order_preview"
        app:textMiddleColor="@color/black"
        app:textRight="@string/submit"
        app:textRightColor="@color/red"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/ship_to"/>
        <TextView
            android:id="@+id/preview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/preview_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address"/>
        <TextView
            android:id="@+id/preview_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"/>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/preview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
